Test workflow inputs#3

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,10 +19,9 @@ on:
         - 710
 jobs:
   e2e-tests:
-    if: contains(inputs.nic_series, 800)
-    runs-on: [self-hosted, 800]
-    if: contains(inputs.nic_series, 700)
-    runs-on: [self-hosted, 700]
+    runs-on: 
+      group: self-hosted
+      label: ${{ inputs.nic_series }}
     if: contains(github.event.label.name, 'e2e-test')
     steps:
       - uses: actions/checkout@v3
