--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -20,7 +20,9 @@ on:
 jobs:
   e2e-tests:
     runs-on: [self-hosted, 810]
-    if: contains(github.event.label.name, 'e2e-test')
+    if: |
+      ${{ contains(github.event.label.name, 'e2e-test') ||
+        github.event_name == 'workflow_dispatch' }}
     steps:
       - uses: actions/checkout@v3
         with:
