--- a/.github/workflows/e2e710.yaml
+++ b/.github/workflows/e2e710.yaml
@@ -5,10 +5,10 @@ on:
     types: [labeled]
   workflow_dispatch:
 jobs:
-  e2e-tests:
+  e2e-tests-710:
     runs-on: [self-hosted, 710]
     if: |
-      ${{ contains(github.event.label.name, 'e2e-test-710') ||
+      ${{ github.event.label.name == 'e2e-test-710' ||
         github.event_name == 'workflow_dispatch' }}
     steps:
       - uses: actions/checkout@v3
@@ -68,7 +68,7 @@ jobs:
       - name: Display Status
         run: echo "This job's status is ${{ job.status }}."
   remove-label:
-    needs: e2e-tests
+    needs: e2e-tests-710
     permissions:
       pull-requests: write
       issues: write
