More run-on label testing

--- a/.github/workflows/e2e710.yaml
+++ b/.github/workflows/e2e710.yaml
@@ -9,7 +9,7 @@ jobs:
     if: |
       ${{ github.event.label.name == 'e2e-test-710' ||
         github.event_name == 'workflow_dispatch' }}
-    runs-on: [self-hosted, 710]
+    runs-on: 710 
     steps:
       - uses: actions/checkout@v3
         with:
