--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -9,7 +9,7 @@ jobs:
     if: |
       ${{ github.event.label.name == 'e2e-test' ||
         github.event_name == 'workflow_dispatch' }}
-    runs-on: [self-hosted, 810]
+    runs-on: 810
     steps:
       - uses: actions/checkout@v3
         with:
