--- a/.github/workflows/e2e810.yaml
+++ b/.github/workflows/e2e810.yaml
@@ -6,9 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   e2e-tests:
-    if: |
-      ${{ (contains(github.event.label.name, 'e2e-test')) ||
-        (github.event_name == 'workflow_dispatch') }}
+    if: contains(github.event.label.name, 'e2e-test') || (github.event_name == 'workflow_dispatch')
     runs-on: 810
     steps:
       - uses: actions/checkout@v3
