--- a/.github/workflows/e2e710.yaml
+++ b/.github/workflows/e2e710.yaml
@@ -5,7 +5,7 @@ on:
     types: [labeled]
   workflow_dispatch:
 jobs:
-  710-test:
+  test710:
     if: contains(github.event.label.name, '710') || (github.event_name == 'workflow_dispatch')
     runs-on: 710 
     steps:
@@ -66,7 +66,7 @@ jobs:
       - name: Display Status
         run: echo "This job's status is ${{ job.status }}."
   remove-label:
-    needs: 710-test
+    needs: test710
     permissions:
       pull-requests: write
       issues: write
