--- a/.github/workflows/e2e810.yaml
+++ b/.github/workflows/e2e810.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   e2e-tests:
     if: contains(github.event.label.name, 'e2e-test') || (github.event_name == 'workflow_dispatch')
-    runs-on: 810
+    runs-on: [self-hosted, 810]
     steps:
       - uses: actions/checkout@v3
         with:
