--- a/.github/workflows/e2e710.yaml
+++ b/.github/workflows/e2e710.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   test710:
-    if: contains(github.event.label.name, 'test710') || (github.event_name == 'workflow_dispatch')
+    if: contains(github.event.label.name, '710') || (github.event_name == 'workflow_dispatch')
     runs-on: 710 
     steps:
       - uses: actions/checkout@v3
@@ -71,8 +71,8 @@ jobs:
       pull-requests: write
       issues: write
     runs-on: ubuntu-latest
-    if: always() && contains(github.event.label.name, 'test710')
+    if: always() && contains(github.event.label.name, '710')
     steps:
       - name: remove label
         run: |
-          curl --silent -X DELETE -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ github.token }}' 'https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/labels/test710'
+          curl --silent -X DELETE -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ github.token }}' 'https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/labels/710'
