--- a/.github/workflows/e2e710.yaml
+++ b/.github/workflows/e2e710.yaml
@@ -1,5 +1,5 @@
-name: e2e-test710
-run-name: e2e-test710 initiated by ${{ github.actor }}
+name: sriov-e2e-test710
+run-name: sriov-e2e-test710 initiated by ${{ github.actor }}
 on:
   pull_request:
     types: [labeled]
