--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo github.event.label.name = ${{ github.event.label.name }}
           if [ ${{ github.event.label.name }} == 'e2e-test' ]; then
-            echo "::set-output name=label::810"
+            echo "{label}={810}" >> $GITHUB_OUTPUT
           fi
           if [ ${{ github.event.label.name }} == 'e2e-test-710' ]; then
             echo "::set-output name=label::710"
@@ -35,7 +35,7 @@ jobs:
       - name: Debug label
         id: step2
         if: ${{ github.event.label.name == 'e2e-test' }}
-        run: echo Hello, e2e-test!
+        run: echo "{label}={810}" >> $GITHUB_OUTPUT
   e2e-tests:
     needs: [prepare-label]
     runs-on: ${{ needs.prepare-label.outputs.label }}
