More run-on label testing

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -23,10 +23,10 @@ jobs:
         id: step1
         run: |
           echo github.event.label.name = ${{ github.event.label.name }}
-          if [ ${{ github.event.label.name }} == e2e-test ]; then
+          if [ ${{ github.event.labels.name }} == e2e-test ]; then
             echo "label=810" >> $GITHUB_OUTPUT
           fi
-          if [ ${{ github.event.label.name }} == e2e-test-710 ]; then
+          if [ ${{ github.event.labels.name }} == e2e-test-710 ]; then
             echo "label=710" >> $GITHUB_OUTPUT
           fi
           if [ -n ${{ github.event.inputs.tag }} ]; then
