--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,16 +19,17 @@ jobs:
     outputs:
       label: ${{ steps.step1.outputs.label }}
     steps:
-      - name: Check label
+      - name: Check label 810
+        id: step1
+        if: contains( github.event.pull_request.labels.*.name, 'e2e-test')
+        run: echo "label=810" >> $GITHUB_OUTPUT
+      -name: Check label 710
+        id: step1
+        if: contains( github.event.pull_request.labels.*.name, 'e2e-test-710')
+        run: echo "label=710" >> $GITHUB_OUTPUT
+      -name: Check inputs
         id: step1
         run: |
-          echo github.event.label.name = ${{ github.event.label.name }}
-          if [ contains( github.event.pull_request.labels.*.name, 'e2e-test') ]; then
-            echo "label=810" >> $GITHUB_OUTPUT
-          fi
-          if [ ${{ github.event.labels.name }} == e2e-test-710 ]; then
-            echo "label=710" >> $GITHUB_OUTPUT
-          fi
           if [ -n ${{ github.event.inputs.tag }} ]; then
             echo "label=${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
           fi
