--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -34,7 +34,7 @@ jobs:
           fi
   e2e-tests:
     needs: [ prepare-label ]
-    if: "!contains(needs.prepare-label.outputs.label, 'skip')"
+    if: ${{ needs.prepare-label.outputs.label }}
     runs-on: ${{ needs.prepare-label.outputs.label }}
     steps:
       - uses: actions/checkout@v3
